--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_checkout.scss
@@ -718,7 +718,7 @@
 #newCardCC .card-group  .controls.col-md-6,  
   #newCardCC .card-group .controls.col-md-4,  
    #newCardCC .card-group .controls.col-md-2,    
-   #newCardCC .card-group .controls.col-md-12, #debitCard .card-group  .controls.col-md-6,  #debitCard .card-group  .controls.col-md-4,   #debitCard .card-group  .controls.col-md-2{
+   #newCardCC .card-group .controls.col-md-12, #debitCard .card-group  .controls.col-md-6,  #debitCard .card-group  .controls.col-md-4,   #debitCard .card-group  .controls.col-md-2, #debitCard .card-group  .controls.col-md-12{
      padding-left: 10px;
     padding-right: 10px;
  }
